--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 .idea
 /dist/
 src/statusbar_hid_battery_info/__pycache__
-dev.derfryday.statusbar-hid-batt-info_tmp.plist
-dev.derfryday.statusbar-hid-batt-info.plist
 StatusbarHIDBattInfo.app
 StatusbarHIDBattInfo
 _CodeSignature
@@ -12,3 +10,4 @@ app.app
 app.build
 app.dist
 app.onefile-build
+Resources/*
